<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="48sp"
            android:background="#efefef"
            android:id="@+id/textInput"
            android:gravity="end|center_vertical"
            android:maxLength="60"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_goneMarginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput"
            android:gravity="fill">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

            <Button
                    android:text="@string/_7"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnSeven"/>

            <Button
                    android:text="@string/_8"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnEight"/>

            <Button
                    android:text="@string/_9"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnNine"/>

            <Button
                    android:text="@string/slash"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onOperator"
                    android:id="@+id/btnDivide"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

            <Button
                    android:text="@string/_4"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnFour"/>

            <Button
                    android:text="@string/_5"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnFive"/>

            <Button
                    android:text="@string/_6"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnSix"/>

            <Button
                    android:text="@string/multiply"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onOperator"
                    android:id="@+id/btnMultiply"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

            <Button
                    android:text="@string/_1"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnOne"/>

            <Button
                    android:text="@string/_2"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnTwo"/>

            <Button
                    android:text="@string/_3"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnThree"/>

            <Button
                    android:text="@string/minus"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onOperator"
                    android:id="@+id/btnSubtract"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

            <Button
                    android:text="@string/dot"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDot"
                    android:id="@+id/btnDecimal"/>

            <Button
                    android:text="@string/_0"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDigit"
                    android:id="@+id/btnZero"/>

            <Button
                    android:text="@string/c"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onClear"
                    android:id="@+id/btnClear"/>

            <Button
                    android:text="@string/plus"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onOperator"
                    android:id="@+id/btnAdd"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <Button
                    android:text="@string/leftEmphasis"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onLEmphasis"
                    android:id="@+id/btnLEmphasis"/>

            <Button
                    android:text="@string/rightEmphasis"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onREmphasis"
                    android:id="@+id/btnREmphasis"/>

            <Button
                    android:text="@string/del"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onDelete"
                    android:id="@+id/btnDel"/>

            <Button
                    android:text="@string/equal"
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onEqual"
                    android:id="@+id/btnEqual"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>